--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -23,7 +23,12 @@
                 <p><span Title="Click a specific icon to revoke access.">Connected Accounts:</span>
                 {% for provider, img in sso_providers %}
                     {% if provider.capitalize() in user.sso.split(',') and session.current_oauth_provider == provider %}
-                        <a href="{{ url_for('routes.oauth2_revoke', provider=provider) }}"><img id="revoke-{{ provider }}-conn" src="{{ img }}" aria-label="{{ provider }} Image" aria-hidden="true" Title="Remove {{ provider.capitalize() }} connection." alt="{{ provider }} Image" class="sso-img"></a>
+                        {% if provider == 'github' %}
+                            <input type="hidden" id="provider_url" value="{{ url_for('routes.oauth2_revoke', provider=provider) }}">
+                            <a href="https://github.com/settings/connections/applications/b2cbacd4a40947958121" target="_blank" onclick="disconnectGithub()"><img id="revoke-{{ provider }}-conn" src="{{ img }}" aria-label="{{ provider }} Image" aria-hidden="true" Title="Remove {{ provider.capitalize() }} connection - Directs you to an external page." alt="{{ provider }} Image" class="sso-img"></a>
+                        {% else %}
+                            <a href="{{ url_for('routes.oauth2_revoke', provider=provider) }}"><img id="revoke-{{ provider }}-conn" src="{{ img }}" aria-label="{{ provider }} Image" aria-hidden="true" Title="Remove {{ provider.capitalize() }} connection." alt="{{ provider }} Image" class="sso-img"></a>
+                        {% endif %}
                     {% elif provider.capitalize() in user.sso.split(',') %}
                         <img id="{{ provider }}-conn" src="{{ img }}" aria-label="{{ provider }} Image" aria-hidden="true" Title="Login with {{ provider.capitalize() }} to remove connection." alt="{{ provider }} Image" class="sso-img">
                     {% endif %}
