--- a/myApp/templates/saved_messages.html
+++ b/myApp/templates/saved_messages.html
@@ -5,22 +5,43 @@
 
 <h1 style="text-align:center;">{% block title %}Saved Messages{% endblock %}</h1>
 {% if saved_messages %}
-    <table id="savedMessageTable" class="saved-msg-tbl">
+    <table id="savedMessageTable" class="table table-responsive table-light table-striped table-hover">
         <caption>All encoded messages saved by {{ user.username }}</caption>
-        <tr class="saved-msg-tr">
-            <th class="saved-msg-td-th" Title="Counter for {{ user.username }}'s saved messages">Number</th>
-            <th class="saved-msg-td-th" Title="Encoded Message Text">Encoded Message</th>
-            <th class="saved-msg-td-th" Title="Date & Time the message was saved">Saved Datetime</th>
-            <th class="saved-msg-td-th" Title="Available actions to take on this message">Actions</th>
-        </tr>
+        <thead class="table-primary">
+            <tr>
+                <th scope="col" Title="Counter for {{ user.username }}'s saved messages">#</th>
+                <th scope="col" Title="Encoded Message Text">Encoded Message</th>
+                <th scope="col" Title="Date & Time the message was saved">Saved Datetime</th>
+                <th scope="col" Title="Available actions to take on this message">Actions</th>
+            </tr>
+        </thead>
+        <tbody>
         {% for savedMessage in saved_messages %}
-            <tr class="saved-msg-tr">
-                <td class="saved-msg-td-th">{{ loop.index }}</td>
-                <td id="savedText{{ loop.index }}" class="saved-msg-td-th">{{ savedMessage['encoded_text'] }}</td>
-                <td class="saved-msg-td-th">{{ user.get_formatted_date(savedMessage['saved_datetime']) }}</td>
-                <td class="saved-msg-td-th"><form id="deleteSavedMsg{{ loop.index }}" name="deleteSavedMsg{{ loop.index }}" action="{{ url_for('routes.delete_saved_message', message_id=savedMessage['id']) }}" method="post" class="form-general"><button id="copyButton{{ loop.index }}" aria-label="Copy encoded message to clipboard" data-bs-toggle="tooltip" data-bs-placement="top" title="Copy encoded message to clipboard" class="btn btn-warning btn-sm saved-action-btn" type="button" onclick="copyToClipboard('savedText{{ loop.index }}');"><i class="bi bi-clipboard" aria-hidden="true"></i></button><button aria-label="Delete Saved Message" class="btn btn-danger btn-sm saved-action-btn" data-bs-placement="top" data-bs-toggle="tooltip" form="deleteSavedMsg{{ loop.index }}" id="removeSavedButton{{ loop.index }}" title="Delete Saved Message" type="submit" value="Delete"><i class="bi bi-trash" aria-hidden="true"></i></button></form></td>
+            <tr>
+                <th scope="row">{{ loop.index }}</th>
+                <td id="savedText{{ loop.index }}" class="message-text">{{ savedMessage['encoded_text'] }}</td>
+                <td>{{ user.get_formatted_date(savedMessage['saved_datetime']) }}</td>
+                <td>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-6 col-md-3">
+                                <button id="copyButton{{ loop.index }}" aria-label="Copy encoded message to clipboard" data-bs-toggle="tooltip" data-bs-placement="top" title="Copy encoded message to clipboard" class="btn btn-warning btn-sm saved-action-btn" type="button" onclick="copyToClipboard('savedText{{ loop.index }}');">
+                                    <i class="bi bi-clipboard" aria-hidden="true"></i>
+                                </button>
+                            </div>
+                            <div class="col-6 col-md-3">
+                                <form id="deleteSavedMsg{{ loop.index }}" name="deleteSavedMsg{{ loop.index }}" action="{{ url_for('routes.delete_saved_message', message_id=savedMessage['id']) }}" method="post" class="form-general">
+                                    <button aria-label="Delete Saved Message" class="btn btn-danger btn-sm saved-action-btn" data-bs-placement="top" data-bs-toggle="tooltip" form="deleteSavedMsg{{ loop.index }}" id="removeSavedButton{{ loop.index }}" title="Delete Saved Message" type="submit" value="Delete">
+                                        <i class="bi bi-trash" aria-hidden="true"></i>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </td>
             </tr>
         {% endfor %}
+        </tbody>
     </table>
 {% else %}
     <h4>You have no saved messages</h4>
