--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -40,7 +40,7 @@
         {% endif %}
     </div>
 
-    <form id="updateProfileForm" method="post" class="form-general">
+    <form id="updateProfileForm" action="{{ url_for('routes.profile', user_id=current_user.id) }}" method="post" class="form-general">
         <div class="row">
             <div class="col-sm-6">
                 <div class="card-profile">
@@ -87,7 +87,8 @@
         </div>
         <hr class="mt-3 mb-3"/>
         <div class="mb-3">
-            <button name="updateProfile" class="btn btn-primary bold-btn" Value="Update Profile" type="submit" form="updateProfileForm" title="Update Profile">Update Profile</button>
+            <button name="updateProfile" id="updateProfile" class="btn btn-primary bold-btn" Value="Update Profile" type="submit" form="updateProfileForm" title="Update Profile">Update Profile</button>
+            <button name="deleteAccount" id="deleteAccount" class="btn btn-danger bold-btn float-end" Value="Delete Account" type="submit" form="updateProfileForm" title="Delete Account" onClick="return confirm('Are you sure you want to delete your account?');">Delete Account</button>
         </div>
     </form>
 </div>
