--- a/myApp/templates/login.html
+++ b/myApp/templates/login.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="col-lg-6">
 			<a id="google-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='google') }}" class="sso-link form-input" Title="Login with Google">
-				<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png" aria-label="Google Login" aria-hidden="true" alt="Google Login" class="sso-link-img">
+				<img id="google" src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Google-favicon-vector.png" aria-label="Google Login" aria-hidden="true" alt="Google Login" class="sso-link-img">
 					Login with Google
 			</a>
 			<a id="github-sso" onclick="loadingGeneral()" href="{{ url_for('routes.oauth2_authorize', provider='github') }}" class="sso-link form-input" Title="Login with GitHub">
