--- a/myApp/templates/user_profile.html
+++ b/myApp/templates/user_profile.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% set active_page = "profile" %}
 {% set sso_providers = [
-	('google', 'https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/2048px-Google_%22G%22_Logo.svg.png'),
+	('google', 'https://upload.wikimedia.org/wikipedia/commons/3/3a/Google-favicon-vector.png'),
 	('github', 'https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg'),
 	('twitch', 'https://upload.wikimedia.org/wikipedia/commons/d/d3/Twitch_Glitch_Logo_Purple.svg')
 ] -%}
